# pacsync

./: .env.example  .gitignore  AUTH_FIX_SUMMARY.md  CHANGELOG.md  CMakeLists.txt  CONFIGURATION_IMPROVEMENTS_SUMMARY.md  CONFIG_FIX_SUMMARY.md  CONFIG_REFRESH_SUMMARY.md  DOCKER.md  Dockerfile  LICENSE  None  PROJECT_STRUCTURE.md  README.md  build-and-push.sh  debug-imports.py  debug_routes.py  debug_server_url.py  debug_stuck_authentication.py  deploy.sh  docker-compose.override.yml.example  docker-compose.scale.yml  docker-compose.yml  fix_database.py  ghcr-login.sh  healthcheck.sh  install.sh  manage_endpoints.py  requirements.txt  run_migration.py  server-requirements.txt  setup.py  start-dev.py  start-prod.py  stemctl --user disable pacman-sync-client  test-docker.sh  test_client_sync.py  test_complete_workflow.py  test_config_change_flow.py  test_config_integration.py  (+9 more)
aur/: .SRCINFO  .gitignore  CONFIG_INSTALLATION_README.md  CONFIG_TEMPLATES_README.md  ICONS.md  Makefile  PKGBUILD  POST_UPGRADE_IMPLEMENTATION.md  README.md  client.conf  config-backup-restore.sh  generate-icons.sh  install-config.sh  pacman-sync-cli  pacman-sync-client  pacman-sync-client-tray.service  pacman-sync-client.service  pacman-sync-client@.service  pacman-sync-server  pacman-sync-server.service  pacman-sync-utility.desktop  pacman-sync-utility.install  pacman-sync-utility.sysusers  pacman-sync-utility.tmpfiles  pools.conf  server.conf  systemd-services-README.md  test-config-installation.py  test-config-templates.py  test-post-install.sh  test-post-upgrade.sh  test-prepare-function.sh  validate-config-installation.py  validate-config.py  validate-icons.sh  validate-pkgbuild.sh  validate-post-install-implementation.sh  validate-prepare-integration.sh  validate-systemd-client-service.sh  validate-systemd-service.sh
client/: __init__.py  api_client.py  config.py  error_handling.py  error_recovery.py  main.py  package_operations.py  pacman_integration_example.py  pacman_interface.py  pool_assignment_handler.py  repository_sync_client.py  status_persistence.py  sync_manager.py  system_tray_handler.py  waybar_integration.py
config/: client.conf.simple  client.conf.template  server.conf.template
(+184 files in other folders)
